// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptaFootballFixturesTicker with flags should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-htpNat sc-ifAKCX iWjFXm"
  />
  <div
    class="sc-bwzfXH uxFfR"
    height="80"
  >
    Placeholder
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker with flags should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-htpNat sc-ifAKCX iWjFXm"
  >
    <div>
      Widget
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker without flags should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-htpNat sc-ifAKCX iWjFXm"
  />
  <div
    class="sc-bwzfXH uxFfR"
    height="80"
  >
    Placeholder
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker without flags should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-htpNat sc-ifAKCX iWjFXm"
  >
    <div>
      Widget
    </div>
  </div>
</DocumentFragment>
`;
